# Technical-indicators

./: .env.sample  .gitignore  .mcp.json  README.md  config.yaml  pyproject.toml
data/: batch_688981_20260410_20260505.csv
docs/: REFERENCE_PROJECTS_ANALYSIS.md  RULES_REFERENCE.md  TRADE_SENTRY_FRAMEWORK.md
scripts/: run_bot.py
trade_sentry/: __init__.py  bot.py  cli.py  config.py  engine.py  input.py  output.py  reviewer.py  schemas.py  storage.py
